scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest31.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest31;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B; @"(x>0)"
	2(y:int) from B to A; @"((y>1) && (y>x))"
}
//*/
